--- a/packages/jest-cypress-react-babel-webpack/package.json
+++ b/packages/jest-cypress-react-babel-webpack/package.json
@@ -1,5 +1,6 @@
 {
   "name": "jest-cypress-react-babel-webpack",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "test": "is-ci \"test:coverage\" \"test:watch\"",
@@ -27,6 +28,54 @@
     "netlify": "npm-run-all --parallel test:coverage build && cp -r coverage/lcov-report dist/lcov-report",
     "setup": "npm install && npm run validate"
   },
+  "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.23",
+    "@reach/router": "^1.2.1",
+    "axios": "^0.19.0",
+    "emotion-theming": "^10.0.27",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/runtime": "^7.10.2",
+    "@emotion/babel-preset-css-prop": "^10.0.23",
+    "@testing-library/cypress": "^5.3.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "css-loader": "^3.5.3",
+    "cypress": "^4.7.0",
+    "eslint": "^7.1.0",
+    "eslint-config-kentcdodds": "^14.13.0",
+    "eslint-import-resolver-jest": "^3.0.0",
+    "eslint-plugin-cypress": "^2.11.1",
+    "file-loader": "^6.0.0",
+    "husky": "^4.2.5",
+    "identity-obj-proxy": "^3.0.0",
+    "is-ci-cli": "^2.0.0",
+    "jest": "^26.0.1",
+    "jest-emotion": "^10.0.32",
+    "jest-runner-eslint": "^0.9.0",
+    "jest-watch-select-projects": "^2.0.0",
+    "jest-watch-typeahead": "^0.6.0",
+    "lint-staged": "^10.2.7",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1",
+    "prop-types": "^15.7.2",
+    "serve": "^11.2.0",
+    "start-server-and-test": "^1.11.0",
+    "style-loader": "^1.2.1",
+    "test-data-bot": "^0.8.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
+  },
   "jest-runner-eslint": {
     "cliOptions": {
       "ignorePath": "./.gitignore"
@@ -43,53 +92,5 @@
       "jest --findRelatedTests",
       "git add"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/runtime": "^7.7.4",
-    "@emotion/babel-preset-css-prop": "^10.0.23",
-    "@testing-library/cypress": "^5.0.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-dynamic-import-node": "^2.3.0",
-    "css-loader": "^3.2.0",
-    "cypress": "^4.1.0",
-    "eslint": "^6.7.1",
-    "eslint-config-kentcdodds": "^14.6.1",
-    "eslint-import-resolver-jest": "^3.0.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "file-loader": "^5.0.2",
-    "husky": "^4.2.1",
-    "identity-obj-proxy": "^3.0.0",
-    "is-ci-cli": "^2.0.0",
-    "jest": "^24.9.0",
-    "jest-emotion": "^10.0.27",
-    "jest-runner-eslint": "^0.7.5",
-    "jest-watch-select-projects": "^2.0.0",
-    "jest-watch-typeahead": "^0.4.2",
-    "lint-staged": "^10.0.4",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
-    "prop-types": "^15.7.2",
-    "serve": "^11.2.0",
-    "start-server-and-test": "^1.10.10",
-    "style-loader": "^1.0.0",
-    "test-data-bot": "^0.8.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
-  },
-  "dependencies": {
-    "@emotion/core": "^10.0.22",
-    "@emotion/styled": "^10.0.23",
-    "@reach/router": "^1.2.1",
-    "axios": "^0.19.0",
-    "emotion-theming": "^10.0.27",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
   }
 }
